re PR tree-optimization/45714 (Vectorization of double pow function causes a segmentation fault)

PR tree-optimization/45714
	* tree-vect-stmts.c (vect_transform_stmt): Use a dummy statement 
	created in vectorizable_call instead of the original statement in 
	def stmt updates.

From-SVN: r164420